--- a/templates/random_quote.html
+++ b/templates/random_quote.html
@@ -9,12 +9,12 @@
 	<link rel='stylesheet' type='text/css' href='templates/style.css' />
 	<script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
 	<script>
-		$(function() {{
-			function bla () {{
-				$("h1").removeClass('animate').load('/random', function () {{ $("h1").addClass('animate'); setTimeout(bla, 10000)}});
-			}}
+		$(function() {
+			function bla () {
+				$("h1").removeClass('animate').load('/random', function () { $("h1").addClass('animate'); setTimeout(bla, 10000) });
+			}
 			bla();
-		}});
+		});
 	</script>
 </head>
 
