--- a/templates/random_quote.html
+++ b/templates/random_quote.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta charset="utf-8">
 	
 	<title>Creep</title>
 	<link href='https://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
